# waproof

./: .gitignore  cheat.html
asm-tactics/: Cargo.toml
asm-tactics/src/: assembler.rs  lang.rs  main.rs
asm-tactics/wat/: index.html  reverse.wat
coq/: ExtensibleFormula.v  FirstOrderLogic.v  Type.v
examples/: 1.wp  2.wp  3.wp
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
grammar-rs/: Cargo.toml
grammar-rs/src/: ast.rs  main.rs  query.rs  semantics.rs
kernel/: Cargo.toml
kernel/src/: .wa_type.rs.swp  lib.rs  pa_axiom.rs  pa_convenience.rs  pa_formula.rs  pa_parse.rs  pa_subst.rs  wa_binary.rs  wa_execute.rs  wa_type.rs  wa_valid.rs
lang-macros/: Cargo.toml
lang-macros/src/: lib.rs
lang-rs/: Cargo.toml
lang-rs/src/: ast.rs  main.rs  semantic.rs  semantic_check.rs
lang-stuff/: Cargo.toml
lang-stuff/src/: lib.rs
profiling/: Cargo.toml
profiling/src/: main.rs
prolog/: wasm.pro
subset-macros/: Cargo.toml
subset-macros/src/: lib.rs
subset-main/: Cargo.toml
subset-main/src/: main.rs  standard.rs  valid.rs
subset-stuff/: Cargo.toml
subset-stuff/src/: lib.rs
theory/: Cargo.toml
theory/src/: add.rs  boxing.rs  coprime.rs  eq.rs  equalizer.rs  gen.rs  hyp.rs  lib.rs  mul.rs  process.rs  script.rs  util.rs
