[package]
name = "lang-rs"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
nom = "6.1"
num-bigint = "0.3"
lang-macros = {path = "../lang-macros"}
lang-stuff = {path = "../lang-stuff"}
