[package]
name = "subset-main"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subset-macros = {path = "../subset-macros"}
subset-stuff = {path = "../subset-stuff"}
